--- a/package.json
+++ b/package.json
@@ -7,12 +7,30 @@
     "dev:electron": "electron ."
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "concurrently": "^5.0.2",
     "electron": "^7.1.6",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "postcss-modules": "^1.4.1"
   },
   "dependencies": {
+    "draft-js": "^0.11.3",
+    "draft-js-buttons": "^2.0.2",
+    "draft-js-emoji-plugin": "^2.1.3",
+    "draft-js-linkify-plugin": "^2.0.2",
+    "draft-js-plugins-editor": "^3.0.0",
+    "draft-js-static-toolbar-plugin": "^3.0.1",
+    "draftjs-to-html": "^0.9.1",
+    "immutable": "^3.8.2",
+    "modern-css-reset": "^1.0.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "redux-zero": "^5.1.1",
+    "uuid": "^3.3.3"
+  },
+  "postcss": {
+    "modules": true
   }
 }
