--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
   },
   "dependencies": {
     "draft-js": "^0.11.3",
+    "draft-js-alignment-plugin": "^2.0.6",
+    "draft-js-block-breakout-plugin": "^2.0.1",
     "draft-js-buttons": "^2.0.2",
+    "draft-js-drag-n-drop-plugin": "^2.0.4",
     "draft-js-emoji-plugin": "^2.1.3",
+    "draft-js-focus-plugin": "^3.0.1",
     "draft-js-linkify-plugin": "^2.0.2",
     "draft-js-plugins-editor": "^3.0.0",
     "draft-js-static-toolbar-plugin": "^3.0.1",
+    "draft-js-undo-plugin": "^2.0.3",
     "draftjs-to-html": "^0.9.1",
     "immutable": "^3.8.2",
     "modern-css-reset": "^1.0.4",
