--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "modern-css-reset": "^1.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "redux-zero": "^5.1.1",
     "uuid": "^3.3.3"
